- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.2.0
 - 
    None
 
see: https://codereview.qt-project.org/#change,67626 & tst_QCoreApplication::testDeferredDeleteFromAboutToBlock
deletion doesn't work until the application exits, leading to massive memory leaks in e.g. QtWayland and xcb which both tie into the dispatcher's signals. probably third party code, too.
- is duplicated by
 - 
                    
QTBUG-49238 OS X: deleteLater() not deleting object before application quit
-         
 - Closed
 
 -         
 
- resulted in
 - 
                    
QTBUG-120124 Improvements to deferred deletions / deleteLater()
-         
 - Open
 
 -