tests/auto/corelib/kernel/qcoreapplication/tst_qcoreapplication.h
@@ -58,6 +58,7 @@ private slots:
     void customEventDispatcher();
     void testQuitLock();
     void QTBUG31606_QEventDestructorDeadLock();
+    void testDeferredDeleteFromAboutToBlock();
 };
 
 #endif // TST_QCOREAPPLICATION_H
